--- a/docs/4.3_gradient-descent.md
+++ b/docs/4.3_gradient-descent.md
@@ -148,8 +148,7 @@ while True:
         return x_next
 ```
 
-To implement our gradient descent, we just replace function-giving-next-value with $x_i - \eta (f(x_{i}+h) - f(x_{i}))$:
-
+为了实现我们的梯度下降，我们只需用`xi - η (f(xi+h) - f(xi))`替换`function-giving-next-value`：
 
 ```python
 def minimize(f, x0, eta, h, precision):
@@ -162,7 +161,7 @@ def minimize(f, x0, eta, h, precision):
             return x   # x is coordinate where f(x) is a minimum
 ```
 
-Choosing an appropriate step value $h$ is important to get a decent approximation of the derivative through finite differences but that is large enough to avoid faulty results from lack of precision (subtracting two floating-point numbers in the computer results in a number with much less precision than the original numbers). You want that number to be small enough so that your algorithm does not oscillate around the minimum. If $\eta$ is too big the recurrence relation will compute a finite difference that makes $x_{i+1}$ leap across the minimum to the other wall of the function.  We must also pick a learning rate $\eta$ that allows us to go as fast as we can but not so fast that $x_{i+1}$ overshoots the minimum back and forth. When I crank up my learning rate too far, I see the algorithm oscillate:
+选择一个合适的步长值`h`，对于通过有限差分获得良好的导数近似非常重要，但这足以避免因精度不足而导致的错误结果（在计算机中减去两个浮点数会使精度低于原始数字）。 您希望该数字足够小，以便您的算法不会在最小值附近振荡。 如果`η`太大，则递归关系将计算有限差分，使得`x{i + 1}`跳过函数的另一个最小值。 我们还必须选择学习率`η`，这样我们可以走得尽可能快，但不要太快，以至于`x{i + 1}`来回越过最小值。 当我把学习率提高太多时，我看到算法在振荡：
 
 ```
 ...
@@ -174,8 +173,7 @@ f(2.478172114663) = -0.082429682649 , delta = -0.36033000672594917013
 ...
 ```
 
-Here's are some decent parameters and how we can call the minimize function:
-
+这里有一些不错的参数以及我们如何调用最小化函数：
 
 ```python
 import random
@@ -190,17 +188,16 @@ print(f"f({minx}) = {f(minx)}")
 # f(0.9886073570106972) = -1.0056986067028884
 ```
 
+为了帮助您了解程序正在执行的操作，您可以打印`x`，`f(x)`以及您认为有助于查看程序如何探索曲线的任何其他值。在循环中：
 
-To help you understand what the program is doing, you can print out $x$, $f(x)$, and any other value you think is helpful to see how your program explores the curve. This goes inside the loop:
 
 ```python
 print(f"f({x:.12f}) = {f(x):.12f} delta = {delta:.20f}")
 ```
 
-## Displaying the minimization trace
+## 显示最小化轨迹
 
-Instead of just printing the values out, it's much easier to understand the path taken by the minimization function if we visualize it. First thing we need is a version of the function that keeps a trace of all $x$ values:
-
+如果我们可视化它，而不是打印出来，那么理解最小化函数所采用的路径就非常简单了。 我们需要的第一件事是该函数的一个版本，它保留了所有`x`值的轨迹：
 
 ```python
 def minimize_trace(f, x0, eta, h, precision):
@@ -215,8 +212,7 @@ def minimize_trace(f, x0, eta, h, precision):
             return tracex
 ```
 
-Next, we import the matplotlib library for plotting and then define the following display function.
-
+接下来，我们导入 matplotlib 库以进行绘图，然后定义以下展示函数。
 
 ```python
 import matplotlib.pyplot as plt
@@ -243,8 +239,7 @@ def viz_trace(x0, minimizer):
     plt.show()
 ```
 
-To test that routine, we pass in some random starting point and let it display the trace:
-
+为了测试该例程，我们传递一些随机的起始点并让它显示轨迹：
 
 ```python
 # every time you run this, it'll start at new initial location and find nearest minimum
@@ -258,13 +253,13 @@ viz_trace(x0, minimize_trace)
 ![png](img/4.3_gradient-descent_23_0.png)
 
 
-# Using symbolic derivatives
+# 使用符号导数
 
-Instead of the finite difference solution, we can do a better job using the [symbolic derivative](https://m.wolframalpha.com/input/?i=derivative+cos%283*pi*x%29+%2F+x), which we can get for free for any function using Wolfram Alpha or [other tools](https://www.derivative-calculator.net/#expr=cos%283%2Api%2Ax%29%20%2F%20x&showsteps=1).  Finite difference is fine in theory but they don't work as well with finite precision floating point numbers (i.e., on a computer). Subtraction destroys precision, particularly when the operands are very similar.
+比起有限差分的解，使用[符号导数](https://m.wolframalpha.com/input/?i=derivative+cos%283*pi*x%29+%2F+x)，我们可以做得更好。我们可以使用 Wolfram Alpha 或[其他工具](https://www.derivative-calculator.net/#expr=cos%283%2Api%2Ax%29%20%2F%20X＆showsteps=1)对任何函数做这件事。 理论上有限差分很好，但它们对于有限精度浮点数（即在计算机上）不起作用。 减法会破坏精度，尤其是当操作数非常相似时。
 
-\\[
-\frac{d}{dx} \frac{cos(3\pi x)}{x} = - \frac{3 \pi x sin(3 \pi x) + cos(3 \pi x)}{x^2}
-\\]
+```
+d/dx(cos(3pi x)/x) = (-3pi x sin(3pi x) + cos(3pi x))/x^2
+```
 
 
 ```python
@@ -294,6 +289,6 @@ viz_trace(x0, minimize_dx)
 ![png](img/4.3_gradient-descent_26_0.png)
 
 
-## Summary
+## 总结
 
-Lots of mathematical computing problems require an iterative solution. One of the most important is minimizing error functions to train machine learning models. The good news is that the gradient descent method described here follows the simple iterative method outline we saw when approximating square root. The next step is to extend gradient descent to two variables, which you will do as a project to solve a regression (line fitting) problem.
+许多数学计算问题需要迭代解。 其中最重要的是最小化误差函数来训练机器学习模型。 好消息是，这里描述的梯度下降方法，遵循我们在近似平方根时看到的简单迭代方法。 下一步是将梯度下降扩展为两个变量，您将作为一个项目来解决回归（直线拟合）问题。
