--- a/docs/2.1_programming.md
+++ b/docs/2.1_programming.md
@@ -1,7 +1,8 @@
-# Introduction to programming
+# 编程导论
 
-<p align="right"><i>Computer Science is no more about computers<br>than astronomy is about telescopes.</i><br>
-&nbsp;&nbsp;&nbsp;&nbsp;— Edsger Dijkstra
+> 计算机科学不仅关于计算机，就跟天文学不仅关于望远镜一样。
+> 
+> -- Edsger Dijkstra
 
 我记得面对我的第一个编程任务（1980 年的 BASIC！），我完全没做出来。我甚至不知道如何开始解决这个问题。我很难过，尽管编码对我来说很快就会变得非常自然。我最初的困难的原因现在显而易见：教师完全没有提供将问题转换为正在运行的程序的技术或策略。我必须自己解决这个问题。
 
@@ -55,38 +56,39 @@
 
 如上所述，您还可以使用两种策略或一般准则来处理程序设计过程：
 
-* *Start with the end result and work your way backwards, asking what the prerequisites are for each step*. In other words, the processing step or steps preceding step *i* compute the data or values needed by step *i*. For example, we cannot print the average of some numbers before we compute that average. We can't compute the average until we sum those numbers. We can't sum until we load those numbers into memory etc...
-* *Reduce or simplify a new problem to a variation of an existing problem with a known solution.* To apply this new approach, ask what the difference is between the problem you're trying to solve and other problems for which you have a solution.
+* *从最终结果开始，向后工作，询问每个步骤的先决条件*。 换句话说，步骤 i 之前的一个或多个处理步骤，计算步骤 i 所需的数据或值。 例如，在计算平均值之前，我们无法打印某些数字的平均值。 在我们对这些数字求和之前，我们无法计算平均值。 我们不能综合，直到我们将这些数字加载到内存等...
+* *使用已知解决方案将新问题归约或简化为现有问题的变体。*要应用这种新方法，请询问您尝试解决的问题与您有解决方案的其他问题之间的区别。
 
-Both techniques are well known in architecture, engineering, and mathematics.  For example, imagine you want to erect a heavy statue 10 feet off the ground. A structural engineer might decide that the heavy statute needs a flat metal base directly underneath it. Then, to support all of that weight, four 10 foot steel beams should support the metal base. The beams should have deep concrete footings in the ground, and so on. That's working backwards from the end result.
+这两种技术在建筑，工程和数学方面都是众所周知的。 例如，想象一下你想在离地面 10 英尺的地方竖立一尊沉重的雕像。 结构工程师可能会认为沉重的雕像需要一个直的金属底座。 然后，为了支撑所有这些重量，四个 10 英尺的钢梁应该支撑金属底座。 钢梁应在地面上有深层混凝土基座，等等。这是从最终结果倒退的。
 
-As an example of reuse, engineers building a new suspension bridge do not proceed as if such a thing has never been built before.  It's likely they will take an existing design and tweak it to suit the new situation.
+作为重用的一个例子，建造一座新吊桥的工程师不会像以前从未建造过这样的东西那样。 他们可能会采用并调整现有的设计来适应新的情况。
 
-As an aside, plan reuse is often used to poke fun at other disciplines. For example, from [a collection of physicist jokes](https://www.astro.umd.edu/~avondale/extra/Humor/ScienceHumor/PhysicistJokes.html), here is a one variation:
-> A Physicist and a mathematician are sitting in a faculty lounge. Suddenly, the coffee machine catches on fire. The physicist grabs a bucket and leap towards the sink, fills the bucket with water and puts out the fire. Second day, the same two sit in the same lounge. Again, the coffee machine catches on fire. This time, the mathematician stands up, gets a bucket, hands the bucket to the physicist, thus *reducing the problem to a previously solved one*.
+另外，计划重用通常用于开其他学科的玩笑。 例如，来自[物理学家笑话的集合](https://www.astro.umd.edu/~avondale/extra/Humor/ScienceHumor/PhysicistJokes.html)，这里有一个变体：
 
-**Exercise**: Given a string containing the digits of a number, such as `s = "501"`, print out the sum of the individual digits. In this case, the output should be `6 = 5 + 0 + 1`. Hint: `int('9')` yields value 9. Work backwards from the desired result, the sum, to figure out what you need. For example, the result is the sum of the digits. That means we need the digits. To get the digits, we can either iterate through the characters of a string or we can convert the string to a list of characters and iterate that. As we iterate, we can just sum up the digit values. To sum things up, we need to initialize a temporary result variable, perhaps called `n`.
+> 一位物理学家和一位数学家正坐在教职员休息室里。 突然间，咖啡机着火了。 物理学家抓起一个水桶，跳向水槽，把水桶装满水，灭火。 第二天，同样的两个人坐在同一个休息室。 咖啡机再次着火。 这一次，数学家站起来，拿起一个桶，把桶交给物理学家，从而*将问题归约到先前解决的问题*。
 
-**Exercise**: Given a list of numbers in `A`, reverse the numbers *inline* (meaning w/o a separate copy of `A` and w/o creating a new list to return). Start by writing an example on the board. This exercise is useful for flipping images in your [images project](../projects/images.md).
+**练习**：给定一个包含十进制数字的字符串，例如`s = "501"`，打印出各个数字的总和。 在这种情况下，输出应为`6 = 5 + 0 + 1`。 提示：`int('9')`产生值 9。从期望的结果，求和，向后工作，找出你需要的东西。 例如，结果是数字的总和。 这意味着我们需要数字。 要获取数字，我们可以遍历字符串的字符，或者我们可以将字符串转换为字符列表并迭代它。 在我们迭代时，我们可以求和数字值。 总而言之，我们需要初始化一个临时结果变量，可能称为`n`。
 
-If you get stuck, or just to check your answers, you can check [my solutions](https://github.com/parrt/msan501/blob/master/notes/code/problem_solving.py).
+**练习**：在`A`中给出数字列表，原地反转数字（意思是没有单独的`A`的副本，以及不创建新的列表来返回）。 首先在白板上写一个例子。 此练习对于在[图像项目](../projects/images.md)中的翻转图像非常有用。
 
-Now that we have an overall strategy for problem solving, let's look at a program outline that'll help us get started with just about any data science program you need to build.
+如果您遇到困难，或只是检查您的答案，您可以查看[我的答案](https://github.com/parrt/msan501/blob/master/notes/code/problem_solving.py)。
 
-## Data science program template
+现在我们已经有了解决问题的整体策略，让我们来看一个程序大纲，它将帮助我们上手您需要构建的任何数据科学程序。
 
-Experienced programmers draw from a collection of generic mental templates as starting points. There are templates for desktop GUI apps, machine learning classifiers, web servers, etc....  A template provides an overall structure for the program and the programmer just has to tailor it to a specific problem.
+## 数据科学程序模板
 
-Relying on mental or even physical templates is very common, not just in programming. Lawyers have generic templates for contracts and screenwriters have generic scripts for the various movie genres. For example, most action movies go like this: Meet the bad guy. Meet the hero/heroine. Chase scene. Hero/heroine overcomes great difficulties to defeat the bad guy and his minions.  Programming is most similar to writing legal documents because of the required precision. A missing word or punctuation can crash a program or bankrupt a contract signatory. (e.g., see [The Typo that Destroyed a NASA Rocket](https://priceonomics.com/the-typo-that-destroyed-a-space-shuttle)).
+经验丰富的程序员从一组通用心智模板中抽取起点。 有桌面 GUI 应用程序，机器学习分类器，Web 服务器等模板....模板提供程序的整体结构，程序员只需根据特定问题进行定制。
 
-Gaining experience as a programmer means recognizing patterns in your code and creating generic templates in your mind for future use.  While you're getting started, you can rely on the experience of other programmers by reusing existing libraries of code and by using relevant templates. This leads us to the following generic data science program template that is suitable for most of the problems you're likely to run into:
+依靠心智模板甚至物理模板非常常见，而不仅仅是编程。 律师拥有合同的通用模板，编剧有各种电影类型的通用脚本。 例如，大多数动作电影都是这样的：遇见坏人；遇见英雄；追逐场景；英雄克服了很大的困难来打败坏人和他的仆从。由于所需的精度，编程与编写法律文档最相似。 丢失的单词或标点可能导致程序崩溃或合同签字人破产。（例如，参见[毁坏 NASA 火箭的错别字](https://priceonomics.com/the-typo-that-destroyed-a-space-shuttle)）。
 
-1. Acquire data, which means finding a suitable file or collecting data from the web and storing in a file or database
-2. Load data from disk or database and place into memory, organized into data structures
-2. Normalize, filter, clean, or otherwise prepare data
-3. Process the data, which can mean training a machine learning model, transforming the data, computing summary statistics, or optimizing a cost function
-4. Emit results, which can be anything from simply printing an answer to saving data to the disk to generating a fancy visualization
+获得作为程序员的经验，意味着识别代码中的模式，并在脑海中创建通用模板来供将来使用。 在开始使用时，您可以通过重用现有的代码库和使用相关模板，来依赖其他程序员的经验。 这将我们引领到以下通用数据科学程序模板，该模板适用于您可能遇到的大多数问题：
 
-Writing a program for a specific problem means figuring out what each of those steps are, though not all programs will use every step. 
+1.获取数据，这意味着找到合适的文件或从 Web 收集数据并存储在文件或数据库中
+2.从磁盘或数据库加载数据，并放入组织成数据结构的内存
+2.规范化，过滤，清理或以其他方式准备数据
+3.处理数据，这可能意味着训练机器学习模型，转换数据，计算摘要统计量或优化成本函数
+4.输出结果，可以是任何东西，从简单地将答案打印，到保存数据到磁盘以及生成奇特的可视化
 
-**Acknowledgements**. Conversations with [Kathi Fisler](http://cs.brown.edu/~kfisler/) provided a lot of inspiration for the disciplined, planned approach to programming summarized here. For more on design recipes, see [Transferring Skills at Solving Word Problems from Computing to Algebra Through Bootstrap](https://cs.brown.edu/~sk/Publications/Papers/Published/sfkf-trans-word-prob-comp-alg-bs/paper.pdf).
+为特定问题编写程序意味着要弄清楚每个步骤是什么，尽管并非所有程序都会使用每一步。
+
+**致谢。**与 [Kathi Fisler](http://cs.brown.edu/~kfisler/) 的对话，为这里总结的有原则的，有计划的编程方法提供了很多灵感。 有关设计秘籍的更多信息，请参阅[通过自举从计算到代数的解决单词问题的转移技巧](https://cs.brown.edu/~sk/Publications/Papers/Published/sfkf-trans-word-prob-comp-alg-BS/ paper.pdf)。
