--- a/docs/1.1_sound.md
+++ b/docs/1.1_sound.md
@@ -1,5 +1,11 @@
+# 1.1 一些动机（音频处理）
 
-# 一些动机（音频处理）
+> 原文：[A bit of motivation (Audio processing)](https://github.com/parrt/msds501/blob/master/notes/sound.ipynb)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 学习编程涉及学习很多细节。 为了简单起见，教师倾向于从简单的代码示例开始，但这些最终变得非常无趣。 我想用一个有趣的计算应用开始本课程，来激励你学习如何编写代码。 我想表明，即使是一点点代码，回报也可能是巨大的。 我不希望你最初了解所有的细节，只是广泛的笔画。 在第一个讲义/实验中，我们将利用现有的代码库，来了解计算机如何表示音乐和其他音频文件。
 
