--- a/docs/1.2_hello.md
+++ b/docs/1.2_hello.md
@@ -1,4 +1,11 @@
-# Python 工具的初次尝试
+# 1.2 Python 工具的初次尝试
+
+> 原文：[A first taste of Python tools](https://github.com/parrt/msds501/blob/master/labs/hello.md)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 ## 加载命令行应用
 
