--- a/docs/2.1_programming.md
+++ b/docs/2.1_programming.md
@@ -1,4 +1,12 @@
-# 编程导论
+# 2.1 编程导论
+
+> 原文：[Introduction to programming](https://github.com/parrt/msds501/blob/master/notes/programming.md)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
+<!--break-->
 
 > 计算机科学不仅关于计算机，就跟天文学不仅关于望远镜一样。
 > 
