--- a/docs/2.2_data-in-memory.md
+++ b/docs/2.2_data-in-memory.md
@@ -1,4 +1,11 @@
-# 在内存中表示数据
+# 2.2 在内存中表示数据
+
+> 原文：[Representing data in memory](https://github.com/parrt/msds501/blob/master/notes/data-in-memory.ipynb)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 典型的程序要求我们从磁盘加载数据并放入组织成数据结构的内存中。我们在内存中表示数据的方式对于构建程序至关重要。数据科学大纲尤其如此，因为处理数据是我们的焦点。
 
