--- a/docs/2.3_computation.md
+++ b/docs/2.3_computation.md
@@ -1,5 +1,11 @@
+# 2.3 计算模型
 
-# 计算模型
+> 原文：[Model of Computation](https://github.com/parrt/msds501/blob/master/notes/computation.ipynb)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 现在我们知道计算机如何在内存中存储数据，我们需要对计算机如何处理数据有基本的了解。 让我们探索一下计算机可以执行的最简单，细粒度的操作。 最终，我们将从这些操作中抽取设计模式。程序员考虑高级操作，例如*映射*，*搜索*或*过滤*，但是我们的手指键入与这些高级操作相关联的细粒度代码模式。
 
