--- a/docs/2.4_python-patterns.md
+++ b/docs/2.4_python-patterns.md
@@ -1,4 +1,11 @@
-# Python 中的编程模式
+# 2.4 Python 中的编程模式
+
+> 原文：[Programming Patterns in Python](https://github.com/parrt/msds501/blob/master/notes/python-patterns.ipynb)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 现在我们已经了解了计算机如何组织数据，并进行一些低级编程操作，现在让我们看一些常见的高级编程模式。 每一个这些操作都有一个使用条件和循环模式的实现，我们可以使用 python 语法很容易地表达。我们也可以使用现有的库函数来实现相同的功能，我们也将探索它们。
 
