--- a/docs/2.5_aliasing.md
+++ b/docs/2.5_aliasing.md
@@ -1,5 +1,11 @@
+# 2.5 数据别名
 
-# 数据别名
+> 原文：[Data Aliasing](https://github.com/parrt/msds501/blob/master/notes/aliasing.ipynb)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 编程最棘手的事情之一是确切地确定变量所指的数据。 请记住，我们使用`data`和`salary`这样的名称来表示保存数据值的内存单元。 名称比物理内存地址更容易记住，但我们可能被愚弄。 例如，显然两个变量`x`和`y`都可以具有相同的整数值 7：
 
