--- a/docs/2.6_functions.md
+++ b/docs/2.6_functions.md
@@ -1,5 +1,11 @@
+# 2.6 使用函数组织你的代码
 
-# 使用函数组织你的代码
+> 原文：[Organizing your code with functions](https://github.com/parrt/msds501/blob/master/notes/functions.ipynb)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 <img src="img/pestle.png" width="75" align="right">
 
