--- a/docs/2.7_reading-code.md
+++ b/docs/2.7_reading-code.md
@@ -1,4 +1,10 @@
-# 如何阅读代码
+# 2.7 如何阅读代码
+
+> 原文：[How to read code](https://github.com/parrt/msds501/blob/master/notes/reading-code.md)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
 
 从根本上说，程序员与代码交流。我们不仅向计算机，也向其他开发人员表达了我们的想法。到目前为止，我们专注于设计程序和编写 Python 代码。这是关键的创作过程，但是，为了编写代码，程序员必须能够阅读其他人编写的代码。
 
