--- a/docs/2.8_OO.md
+++ b/docs/2.8_OO.md
@@ -1,5 +1,10 @@
+# 2.8 面向对象编程
 
-# 面向对象编程
+> 原文：[Object-oriented programming](https://github.com/parrt/msds501/blob/master/notes/OO.ipynb)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
 
 ## 大揭秘
 
