--- a/docs/3.1_files.md
+++ b/docs/3.1_files.md
@@ -1,5 +1,11 @@
+# 3.1 加载文件
 
-# 加载文件
+> 原文：[Loading files](https://github.com/parrt/msds501/blob/master/notes/files.ipynb)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 本课程的目的是学习如何从笔记本电脑磁盘上的文件中提取数据。 我们将加载文本文件中的单词和数据文件中的数字。 在此过程中，我们将了解文件名和文件路径的更多信息。 我们的通用分析程序模板的前两个元素，表示获取数据然后将其加载到数据结构中：
 
