--- a/docs/3.2_dataframes.md
+++ b/docs/3.2_dataframes.md
@@ -1,5 +1,11 @@
+# 3.2 数据帧
 
-# 数据帧
+> 原文：[Pandas dataframes](https://github.com/parrt/msds501/blob/master/notes/dataframes.ipynb)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 我们将使用真实的[ kaggle 比赛](https://www.kaggle.com/c/two-sigma-connect-rental-listing-inquiries)数据集来探索 Pandas 数据帧。获取[`rent.csv.zip`](https://mlbook.explained.ai/data/rent.csv.zip)文件并解压缩。
 
