--- a/docs/3.3_data.md
+++ b/docs/3.3_data.md
@@ -1,4 +1,11 @@
-# 操纵和可视化数据
+# 3.3 操纵和可视化数据
+
+> 原文：[Manipulating and Visualizing Data](https://github.com/parrt/msds501/blob/master/notes/data.ipynb)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 我们已经学习了[加载文件](files.ipynb)的基础知识，现在是时候将加载的数据，从 [NumPy](http://www.numpy.org/) 和 [Pandas](http://pandas.pydata.org/) 重新组织为常用的数据结构了。 为了产生各种数据结构，我们将把它们提供给 [matplotlib](https://matplotlib.org/) 进行可视化。 然后，本实验将全面介绍我们的通用数据科学规划模板中的第 2,3 和 5 步：
 
