--- a/docs/4.1_random-uniform.md
+++ b/docs/4.1_random-uniform.md
@@ -1,5 +1,12 @@
+# 4.1 生成均匀的随机数
 
-# 生成均匀的随机数
+> 原文：[Generating Uniform Random Numbers](https://github.com/parrt/msds501/blob/master/notes/random-uniform.ipynb)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
+<!--break-->
 
 > **Q**：如何生成随机字符串？
 > 
