--- a/docs/4.2_sqrt.md
+++ b/docs/4.2_sqrt.md
@@ -1,5 +1,11 @@
+# 4.2 近似平方根
 
-# 近似平方根
+> 原文：[Approximating square root](https://github.com/parrt/msds501/blob/master/notes/sqrt.ipynb)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 有许多有用的函数没有闭式解，这意味着我们不能只进行计算并返回值。 相反，我们需要使用迭代方法来近似函数值。 我们可以用它来近似正弦（用泰勒级数展开），近似平方根（我们将在本课程中做），或优化成本或误差函数（下一讲的梯度下降）。
 
