--- a/docs/4.3_gradient-descent.md
+++ b/docs/4.3_gradient-descent.md
@@ -1,5 +1,11 @@
+# 4.3 单变量梯度下降
 
-# 单变量梯度下降
+> 原文：[Iterative Optimization Via Gradient Descent](https://nbviewer.jupyter.org/github/parrt/msan501/blob/master/notes/gradient-descent.ipynb)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 本讲座/实验的目标是解决一个重要的迭代计算问题：*梯度下降函数最小化*。 我希望你会看到梯度下降与平方根近似相同，只是具有不同的递归关系。 本课程的完整[源代码在这里](https://github.com/parrt/msan501/blob/master/notes/code/descent.py)。
 
