--- a/docs/5.1_bash-intro.md
+++ b/docs/5.1_bash-intro.md
@@ -1,4 +1,11 @@
-# 使用 bash 走向胜利
+# 5.1 使用 bash 走向胜利
+
+> 原文：[Bash your way to victory](https://github.com/parrt/msds501/blob/master/notes/bash-intro.md)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 ## 目标
 
