--- a/docs/5.2_git.md
+++ b/docs/5.2_git.md
@@ -1,4 +1,11 @@
-# 使用 git 版本控制工具
+# 5.2 使用 git 版本控制工具
+
+> 原文：[Introduction to git and revision control](https://github.com/parrt/msds501/blob/master/notes/git.md)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 **动机**。 每个商业开发人员都在工作时使用版本控制。 您将遇到的每家公司都使用它。 仅仅因为这个原因，您需要学习版本控制来在商业环境中发挥作用。 在本课程中，您还将使用版本控制（一种名为`git`的系统）来提交您的作品。
 
