--- a/docs/5.3_aws.md
+++ b/docs/5.3_aws.md
@@ -1,4 +1,11 @@
-# 在 Amazon Web Services 上启动虚拟机
+# 5.3 在 Amazon Web Services 上启动虚拟机
+
+> 原文：[Launching a Virtual Machine at Amazon Web Services](https://github.com/parrt/msds501/blob/master/notes/aws.md)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 本实验的目的是教您在 *Amazon Web Services* 上创建 Linux 机器，登录并将一些数据复制到该机器。
 
