--- a/docs/6.1_linked-list.md
+++ b/docs/6.1_linked-list.md
@@ -1,4 +1,11 @@
-# 链表
+# 6.1 链表
+
+> 原文：[Linked lists](https://github.com/parrt/msds501/blob/master/notes/linked-list.ipynb)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 我们已经研究了 Python 内置的数组/列表，但它们并不总是最好的列表。 有时，我们会在列表的头部或中间插入和删除内容。 如果我们使用实现为连续数组（由内存中的连续单元组成）的列表来执行此操作，我们必须移动大量单元以为新元素腾出空间或填充删除所产生的空隙。
 
