--- a/docs/1.3_sound.md
+++ b/docs/1.3_sound.md
@@ -1,4 +1,11 @@
-# 播放声音
+# 1.3 播放声音
+
+> 原文：[Playing sounds](https://github.com/parrt/msds501/blob/master/labs/sound.md)
+> 
+> 译者：[飞龙](https://github.com/wizardforcel)
+> 
+> 协议：[CC BY-NC-SA 4.0](http://creativecommons.org/licenses/by-nc-sa/4.0/)
+
 
 本实验的目标是让您感到惊讶，您可以使用 Python 处理一些音频文件。您将无法获得所有详细信息，但您可以剪切并粘贴此实验来启动 Python 会话。作为次要目标，您将习惯于安装 Python 包和命令行工具。
 
